[gd_scene load_steps=5 format=2]

[ext_resource path="res://Tilesets/Placeholder_White/Placeholder_White.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Arena/Arena.gd" type="Script" id=2]
[ext_resource path="res://HUD/Player_Status/Player_Status.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.8522, 267.042 )

[node name="Arena" type="Node2D"]
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Arena_Camera" type="Camera2D" parent="."]

[node name="Placeholder_White" parent="." instance=ExtResource( 1 )]
modulate = Color( 0, 0, 0, 1 )
collision_layer = 0
tile_data = PoolIntArray( -589840, 0, 0, -589839, 0, 0, -589838, 0, 0, -589837, 0, 0, -589836, 0, 0, -589835, 0, 0, -589834, 0, 0, -589833, 0, 0, -589832, 0, 0, -589831, 0, 0, -589830, 0, 0, -589829, 0, 0, -589828, 0, 0, -589827, 0, 0, -589826, 0, 0, -589825, 0, 0, -655360, 0, 0, -655359, 0, 0, -655358, 0, 0, -655357, 0, 0, -655356, 0, 0, -655355, 0, 0, -655354, 0, 0, -655353, 0, 0, -655352, 0, 0, -655351, 0, 0, -655350, 0, 0, -655349, 0, 0, -655348, 0, 0, -655347, 0, 0, -655346, 0, 0, -655345, 0, 0, -524304, 0, 0, -589809, 0, 0, -458768, 0, 0, -524273, 0, 0, -393232, 0, 0, -458737, 0, 0, -327696, 0, 0, -393201, 0, 0, -262160, 0, 0, -327665, 0, 0, -196624, 0, 0, -262129, 0, 0, -131088, 0, 0, -196593, 0, 0, -65552, 0, 0, -131057, 0, 0, -16, 0, 0, -65521, 0, 0, 65520, 0, 0, 15, 0, 0, 131056, 0, 0, 65551, 0, 0, 196592, 0, 0, 131087, 0, 0, 262128, 0, 0, 196623, 0, 0, 327664, 0, 0, 262159, 0, 0, 393200, 0, 0, 327695, 0, 0, 458736, 0, 0, 393231, 0, 0, 524272, 0, 0, 458767, 0, 0, 589808, 0, 0, 524303, 0, 0, 655344, 0, 0, 655345, 0, 0, 655346, 0, 0, 655347, 0, 0, 655348, 0, 0, 655349, 0, 0, 655350, 0, 0, 655351, 0, 0, 655352, 0, 0, 655353, 0, 0, 655354, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0 )

[node name="Trigger" type="Area2D" parent="."]
monitorable = false
collision_layer = 0

[node name="Zone" type="CollisionShape2D" parent="Trigger"]
shape = SubResource( 1 )

[node name="Player_Status" parent="." instance=ExtResource( 4 )]
margin_left = -450.0
margin_top = -270.0
margin_right = -250.0
margin_bottom = -228.0
[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
